# ginkgo

./: .gitlab-ci.yml  ABOUT-LICENSING.md  CMakeLists.txt  README.md
cmake/: autodetect_executors.cmake  create_test.cmake
core/: CMakeLists.txt
cuda/: CMakeLists.txt
examples/: CMakeLists.txt
hip/: CMakeLists.txt
mpi/: CMakeLists.txt
mpi/base/: exception.cpp  executor.cpp  mpi_bindings.hpp  version.cpp
mpi/components/: convert_ptrs.hpp  format_conversion.hpp  matrix_operations.hpp  prefix_sum.cpp
mpi/factorization/: par_ilu_kernels.cpp
mpi/matrix/: coo_kernels.cpp  csr_kernels.cpp  dense_kernels.cpp  ell_kernels.cpp  hybrid_kernels.cpp  sellp_kernels.cpp  sparsity_csr_kernels.cpp
mpi/preconditioner/: jacobi_kernels.cpp
mpi/reorder/: metis_fill_reduce_kernels.cpp  rcm_kernels.cpp
mpi/solver/: bicg_kernels.cpp  bicgstab_kernels.cpp  cg_kernels.cpp  cgs_kernels.cpp  fcg_kernels.cpp  gmres_kernels.cpp  ir_kernels.cpp  lower_trs_kernels.cpp  upper_trs_kernels.cpp
mpi/stop/: criterion_kernels.cpp  residual_norm_reduction_kernels.cpp
mpi/test/: CMakeLists.txt  gtest-mpi-main.hpp
mpi/test/base/: CMakeLists.txt  exception_helpers.cpp  mpi_executor.cpp
mpi/test/matrix/: coo_kernels.cpp  csr_kernels.cpp  dense_kernels.cpp  ell_kernels.cpp  hybrid_kernels.cpp  sellp_kernels.cpp
mpi/test/preconditioner/: jacobi_kernels.cpp
mpi/test/solver/: bicgstab_kernels.cpp  cg_kernels.cpp  cgs_kernels.cpp  fcg_kernels.cpp  gmres_kernels.cpp  ir_kernels.cpp
omp/: CMakeLists.txt
reference/: CMakeLists.txt
test_install/: test_install.cpp  test_install_cuda.cu
(+174 files in other folders)
